--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="img">
-            <img src="calculadora.jpg" alt="">
+            <img src="number-blocks.png" alt="">
         </div>
 
     </section>
